paper_experimental_results/2026-05-10T00-24-35/grok-code-fast-1/declarations/type_def_2/sample_003/target.compile.log
error[E0277]: `main` has invalid return type `i32`
  --> benchmark_results/2026-05-10T00-24-35/grok-code-fast-1/declarations/type_def_2/sample_003/target.rs:37:14
   |
37 | fn main() -> i32 {
   |              ^^^ `main` can only return types that implement `Termination`
   |
   = help: consider using `()`, or a `Result`

warning: variable does not need to be mutable
  --> benchmark_results/2026-05-10T00-24-35/grok-code-fast-1/declarations/type_def_2/sample_003/target.rs:40:9
   |
40 |     let mut p: &mut S1 = &mut a;
   |         ----^
   |         |
   |         help: remove this `mut`
   |
   = note: `#[warn(unused_mut)]` (part of `#[warn(unused)]`) on by default

error[E0503]: cannot use `a` because it was mutably borrowed
  --> benchmark_results/2026-05-10T00-24-35/grok-code-fast-1/declarations/type_def_2/sample_003/target.rs:42:17
   |
40 |     let mut p: &mut S1 = &mut a;
   |                          ------ `a` is borrowed here
41 |
42 |     if takes_t1(a) != 11 {
   |                 ^ use of borrowed `a`
...
58 |     if takes_tp1(p) != 13 {
   |                  - borrow later used here

error[E0503]: cannot use `a` because it was mutably borrowed
  --> benchmark_results/2026-05-10T00-24-35/grok-code-fast-1/declarations/type_def_2/sample_003/target.rs:46:17
   |
40 |     let mut p: &mut S1 = &mut a;
   |                          ------ `a` is borrowed here
...
46 |     if takes_s1(a) != 12 {
   |                 ^ use of borrowed `a`
...
58 |     if takes_tp1(p) != 13 {
   |                  - borrow later used here

error: aborting due to 3 previous errors; 1 warning emitted

Some errors have detailed explanations: E0277, E0503.
For more information about an error, try `rustc --explain E0277`.